[tool.poetry]
name = "dip-api"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan.imc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sfbox-api = {git = "https://github.com/IvanMikhailovIMCRAS/sfbox_api.git"}
matplotlib = "^3.8.1"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
